JT-2997 Prevent district label from wrapping

--- a/app/assets/stylesheets/pages/district-boundaries/_district_boundaries_page.scss
+++ b/app/assets/stylesheets/pages/district-boundaries/_district_boundaries_page.scss
@@ -70,6 +70,13 @@
       @include checkbox;
     }
 
+    .district-select {
+      max-width: 40%;
+      label {
+        white-space: nowrap;
+        overflow: hidden;
+      }
+    }
     .district-select select {
       text-overflow: ellipsis;
       width: 100%;
